# jam

./: .gitmodules  CMakeLists.txt  README.md
a+/: CMakeLists.txt  main.cpp
a-/: CMakeLists.txt  main.cpp
immutable/: CMakeLists.txt  rrb.h  vector.h
immutable.tests/: CMakeLists.txt  vector_tests.cpp
jam/: CMakeLists.txt  clipboard.cpp  colors.cpp  colors.h  comments.json  dirent.h  engine.cpp  engine.h  error.cpp  error.h  file_utils.cpp  file_utils.h  grid.cpp  grid.h  jam.rc  main.cpp  mouse.cpp  mouse.h  pdcex.cpp  pdcex.h  serialize.cpp  serialize.h  settings.cpp  settings.h  syntax_highlight.cpp  syntax_highlight.h  utils.cpp  utils.h  window.cpp  window.h
jamcmd/: CMakeLists.txt  main.cpp
jamlib/: CMakeLists.txt  encoding.cpp  encoding.h  error.cpp  error.h  jam.cpp  jam.h  jam_api.h  parse.cpp  parse.h  pipe.cpp  pipe.h
jamlib.tests/: CMakeLists.txt  jamlib_tests.cpp  jamlib_tests.h  test.cpp
pdcurses/: CMakeLists.txt
pdcursestest/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt  active_folder.h  encoding.h  exepath.h  jam_active_folder.h  jam_dirent.h  jam_encoding.h  jam_exepath.h  jam_file_utils.h  jam_filename.h  jam_pipe.h  jam_process.h  jam_utf8.h  jam_utf8_checked.h  jam_utf8_unchecked.h  pipe.h  process.h
